--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -24,6 +24,12 @@
     margin-left: 15px;
     padding: 15px;
     cursor: pointer;
+    @media screen and (max-width: 600px){
+      width: 80px;
+      height: 24px;
+      margin-left: 0px;
+      padding-left: 2px;
+    }
   }
 
   .navhome {
@@ -32,6 +38,10 @@
     line-height: 54px;
     text-align: right;
     margin-left: 70px;
+    @media screen and (max-width: 600px){
+      margin-left: 10px;
+      font-size: 15px;
+    }
   }
 
   .statistics {
@@ -40,6 +50,10 @@
     line-height: 54px;
     text-align: right;
     margin-left: 10px;
+    @media screen and (max-width: 600px){
+      margin-left: 10px;
+      font-size: 15px;
+    }
   }
 
   .actions {
@@ -48,6 +62,10 @@
     line-height: 54px;
     text-align: right;
     margin-right: 17px;
+    @media screen and (max-width: 600px){
+      margin-left: 10px;
+      font-size: 15px;
+    }
   }
 }
 
