--- a/src/components/ProductItem/ProductItem.scss
+++ b/src/components/ProductItem/ProductItem.scss
@@ -42,3 +42,9 @@
     padding: 0.5rem 0 0.5rem 0;
   }
 }
+
+.available-size {
+  display: flex;
+  justify-content: space-around;
+  padding-left: 10px;
+}
