--- a/src/components/ProductsList/ProductList.scss
+++ b/src/components/ProductsList/ProductList.scss
@@ -3,7 +3,7 @@
   grid-template:
     "filters"
     "products";
-  grid-template-rows: 100px 1fr;
+  grid-template-rows: 50px 1fr;
   @media screen and (max-width: 1300px) {
     grid-template-rows: 100px 1fr;
   }
@@ -18,12 +18,13 @@
 .filters {
     display: grid;
     grid-area: filters;
-    grid-template-columns: max-content max-content;
+    grid-template-columns: 1fr 1fr;
 }
 .products {
     display: grid;
     grid-area: products;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    z-index: auto;
     @media screen and (max-width: 1300px){
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: 30rem;
