--- a/frontend/src/components/ProductsList/ProductList.scss
+++ b/frontend/src/components/ProductsList/ProductList.scss
@@ -16,30 +16,52 @@
 }
 
 .filters {
-    display: grid;
-    grid-area: filters;
-    grid-template-columns: 1fr 1fr;
+  display: grid;
+  grid-area: filters;
+  grid-template-columns: 1fr 1fr;
 }
 .products {
-    display: grid;
-    grid-area: products;
-    grid-template-columns: repeat(4, 1fr);
-    z-index: auto;
-    @media screen and (max-width: 1300px){
-        grid-template-columns: repeat(2, 1fr);
-        grid-auto-rows: 30rem;
-      }
-      @media screen and (max-width: 768px){
-        grid-template-columns: repeat(1, 1fr);
-        grid-auto-rows: 35rem;
-      }
-      @media screen and (max-width: 600px){
-        grid-auto-rows: 30rem;
-      }
+  display: grid;
+  grid-area: products;
+  grid-template-columns: repeat(4, 1fr);
+  z-index: auto;
+  @media screen and (max-width: 1300px) {
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 30rem;
+  }
+  @media screen and (max-width: 768px) {
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: 35rem;
+  }
+  @media screen and (max-width: 600px) {
+    grid-auto-rows: 30rem;
+  }
 }
 
 .test {
-    width: 100px;
-    height: 100px;
-    background-color: red;
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
+
+.no-data {
+  padding: 1rem;
+  font-size: 30px;
+  font-family: "Helvetica Neue", monospace;
+  justify-content: space-between;
+  color: black;
+  padding-top: 300px;
+  padding-left: 200px;
+  @media screen and (max-width: 1300px) {
+    padding-top: 283px;
+    padding-left: 200;
+  }
+  @media screen and (max-width: 768px) {
+    padding-top: 200px;
+    padding-left: 20px;
+  }
+  @media screen and (max-width: 600px) {
+    padding-top: 200px;
+    padding-left: 20px;
+  }
 }
